# puppy-zephyr

./: .gitignore  Kconfig.zephyr  west.yml
boards/caninos/: index.rst
boards/caninos/poodle-toy-v1/: Kconfig.poodle-toy-v1  board.yml  poodle-toy-v1.dts  poodle-toy-v1.yml
boards/caninos/poodle-toy-v2/: Kconfig.poodle-toy-v2  board.yml  poodle-toy-v2.dts  poodle-toy-v2.yml
boards/caninos/puppy-testboard/: Kconfig.puppy-testboard  board.cmake  board.yml  puppy-testboard.dts  puppy-testboard.yml
boards/common/: puppyprog.board.cmake
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.puppy  gpio_puppy.c  gpio_puppy.h
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.puppy  i2c_puppy.c  i2c_puppy.h
drivers/misc/: CMakeLists.txt  Kconfig
drivers/misc/pulp_udma_filter/: CMakeLists.txt  Kconfig  pulp_udma_filter.c  pulp_udma_filter.h
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.puppy  pwm_puppy.c
drivers/sdhc/: CMakeLists.txt  Kconfig  Kconfig.puppy  sdhc_puppy.c  sdhc_puppy.h
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.puppy  uart_puppy.c  uart_puppy.h
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.puppy  spi_puppy.c  spi_puppy.h
dts/bindings/gpio/: caninos,puppy-gpio.yaml
soc/caninos/: CMakeLists.txt  Kconfig.soc  init.S  linker.ld  pinctrl_soc.h  puppy_event.c  puppy_irq.c  puppy_timer.c  soc.h  soc.yml  soc_apb_ctrl.h  soc_context.h  soc_event.h  soc_irq.S  soc_offsets.h  soc_pad.h  soc_udma.h
soc/caninos/puppy_v1/: Kconfig  Kconfig.defconfig  Kconfig.soc
soc/caninos/puppy_v2/: Kconfig  Kconfig.defconfig  Kconfig.soc
(+22 files in other folders)
